try fix distribution build

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Open Graph data -->
     <meta property="og:title" content="Portfolio of Jan Mikšík" />
     <!--TBD <meta property="og:url" content="http://www.example.com/" /> -->
-    <meta property="og:image" content="/assets/abstract,2019,drawing on paper,6x7cm.a9a8820f.png" />
+    <meta property="og:image" content="/abstract,2019,drawing on paper,6x7cm.png" />
     <meta property="og:description" content="Portfolio of Jan Mikšík. Drawings, paintings and other pieces" />
 
     <link rel="icon" href="/favicon.ico" />
