--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Portfolio of Jan Mikšík. Drawings, paintings and other pieces">
+    <meta name="description" content="Portfolio of Jan Mikšík. Drawings, paintings and other pieces" />
     <!-- Twitter Card data -->
-    <meta name="twitter:card" value="summary">
+    <meta name="twitter:card" value="summary" />
     <!-- Open Graph data -->
     <meta property="og:title" content="Portfolio of Jan Mikšík" />
     <!--TBD <meta property="og:url" content="http://www.example.com/" /> -->
